<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detail_layout">


    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/details_backdrop_height"
                android:contentDescription="@string/content_desc_backdrop_image"
                tools:background="@color/colorPrimary"
                />

            <ImageView
                android:id="@+id/grid_item_image"

                android:contentDescription="@string/content_desc_movie_poster"
                tools:background="#ccc"
                android:layout_width="@dimen/details_poster_width"
                android:layout_height="@dimen/details_poster_height"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/details_poster_margin_top"


                />






            <TextView
                android:id="@+id/title"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/backdrop"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_toEndOf="@id/grid_item_image"
                android:layout_toRightOf="@id/grid_item_image"
                android:ellipsize="end"
                android:maxLines="2"
                android:contentDescription="@string/title"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                />


            <TextView
                android:id="@+id/release_date"



                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/date"
                android:layout_below="@id/title"
                android:layout_marginEnd="@dimen/margin_default"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_default"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@id/grid_item_image"
                android:layout_toRightOf="@id/grid_item_image"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                />

            <LinearLayout
                android:id="@+id/rating_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/release_date"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="-8dp"
                android:layout_toEndOf="@id/grid_item_image"
                android:layout_toRightOf="@id/grid_item_image"
                android:clipChildren="false"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    android:textColor="?android:attr/textColorPrimary"
                    tools:text="7.3"
                    android:contentDescription="@string/rate"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:text="@string/rating_denominator"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="?android:attr/textColorSecondary"
                    />




                <Button
                    android:layout_width="60dp"
                    android:layout_height="20dp"
                    android:id="@+id/btnSave"
                    android:textColor="@color/colorPrimary"
                    android:contentDescription="@string/added_to_favorites"

                    android:text="@string/favorite"
                    android:background="@color/colorAccent"
                    android:layout_gravity="left"
                    android:layout_marginLeft="40dp"/>

                <Button
                    android:layout_width="60dp"
                    android:layout_height="20dp"
                    android:textColor="@color/colorPrimary"
                    android:contentDescription="@string/removed_from_favorites"

                    android:background="@color/colorAccent"
                    android:text="@string/Delete"
                    android:id="@+id/button"
                    android:layout_gravity="center" />




            </LinearLayout>






            <TextView
                android:id="@+id/overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/grid_item_image"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:lineSpacingMultiplier="@dimen/body_text_line_spacing"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:contentDescription="@string/overview"
                />

        </RelativeLayout>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/listView_video"
            android:layout_gravity="left|top">

        </ListView>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listView_review"
            android:layout_gravity="left|top">

        </ListView>
    </LinearLayout>



</ScrollView>
